реализовал метод groupUsers и вывел на экран результат